batch e massa de transações

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fiapbank
 spring.datasource.username=guimbm
 spring.datasource.password=#guimbm#
 spring.jpa.hibernate.ddl-auto=update
+spring.batch.initialize-schema=always
