--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'mysql:mysql-connector-java'
 	implementation "io.springfox:springfox-swagger2:2.9.2"
 	implementation "io.springfox:springfox-swagger-ui:2.9.2"
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	implementation 'com.opencsv:opencsv:4.5'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testCompile group: 'com.h2database', name: 'h2', version: '1.3.148'
