--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/fiapbank
-spring.datasource.username=guimbm
-spring.datasource.password=#guimbm#
+spring.datasource.url=jdbc:mysql://localhost:3307/fiapbank
+spring.datasource.username=root
+spring.datasource.password=Fiap@2020
 spring.jpa.hibernate.ddl-auto=update
 spring.batch.initialize-schema=always
+server.port=8081
